flux/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: usage
                    operator: In
                    values:
                      - worker
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: tun
              mountPath: /dev/net/tun
            - name: proton
              mountPath: /config/wireguard/wg0.conf
              subPath: wg0.conf
              readOnly: true
            - name: vpn-debug
              mountPath: /config/wireguard/wg0-post.sh
              subPath: wg0-post.sh
              readOnly: true
      volumes:
        - name: vpn-debug
          configMap:
            name: vpn-debug
            defaultMode: 0755
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: data
          persistentVolumeClaim:
            claimName: media-nfs
        - name: proton
          secret:
            secretName: proton
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
